@@ -13,15 +13,15 @@
 
 #define RELTOL 1e-5
 
-void R_max_col(double *matrix, int *nr, int *nc, int *maxes)
+void R_max_col(double *matrix, int *nr, int *nc, int *maxes, int *ties_meth)
 {
-    int r, c, m, ntie, n_r = *nr;
-    double a, b, tol, large;
-    Rboolean isna, used_random = FALSE;
+    int r, c, m, n_r = *nr;
+    double a, b, large;
+    Rboolean isna, used_random = FALSE, do_rand = *ties_meth == 1;
 
     for (r = 0; r < n_r; r++)
     {
-        /* first check row for any NAs and find the largest entry */
+        /* first check row for any NAs and find the largest abs(entry) */
         large = 0.0;
         isna = FALSE;
         for (c = 0; c < *nc; c++)
@@ -32,38 +32,67 @@ void R_max_col(double *matrix, int *nr, int *nc, int *maxes)
                 isna = TRUE;
                 break;
             }
-            large = fmax2(large, fabs(a));
+            if (do_rand)
+                large = fmax2(large, fabs(a));
         }
         if (isna)
         {
             maxes[r] = NA_INTEGER;
             continue;
         }
-        tol = RELTOL * large;
 
         m = 0;
-        ntie = 1;
         a = matrix[r];
-        for (c = 1; c < *nc; c++)
+        if (do_rand)
         {
-            b = matrix[r + c * n_r];
-            if (b >= a + tol)
+            double tol = RELTOL * large;
+            int ntie = 1;
+            for (c = 1; c < *nc; c++)
             {
-                ntie = 1;
-                a = b;
-                m = c;
-            }
-            else if (b >= a - tol)
-            {
-                ntie++;
-                if (!used_random)
+                b = matrix[r + c * n_r];
+                if (b >= a + tol)
                 {
-                    GetRNGstate();
-                    used_random = TRUE;
-                }
-                if (ntie * unif_rand() < 1.)
+                    a = b;
                     m = c;
+                    ntie = 1;
+                }
+                else if (b >= a - tol)
+                { /* b ~= current max. a */
+                    ntie++;
+                    if (!used_random)
+                    {
+                        GetRNGstate();
+                        used_random = TRUE;
+                    }
+                    if (ntie * unif_rand() < 1.)
+                        m = c;
+                }
             }
+        }
+        else
+        {
+            if (*ties_meth == 2) /* return the *first* max if there are ties */
+                for (c = 1; c < *nc; c++)
+                {
+                    b = matrix[r + c * n_r];
+                    if (a < b)
+                    {
+                        a = b;
+                        m = c;
+                    }
+                }
+            else if (*ties_meth == 3) /* return the *last* max ... */
+                for (c = 1; c < *nc; c++)
+                {
+                    b = matrix[r + c * n_r];
+                    if (a <= b)
+                    {
+                        a = b;
+                        m = c;
+                    }
+                }
+            else
+                error("invalid 'ties_meth' {should not happen}");
         }
         maxes[r] = m + 1;
     }
