@@ -97,7 +97,7 @@ void find_interv_vec(double *xt, int *n,	double *x,   int *nx,
 		     int *rightmost_closed, int *all_inside, int *indx);
 
 /* ../../appl/maxcol.c */
-void R_max_col(double *matrix, int *nr, int *nc, int *maxes);
+void R_max_col(double *matrix, int *nr, int *nc, int *maxes, int *ties_meth);
 
 #ifdef  __cplusplus
 }
